--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "regl": "^1.6.1"
   },
   "imports": {
-    "regl": "https://unpkg.com/regl@^1.6.1/dist/regl.js",
-    "mobx": "https://unpkg.com/mobx@^5.15.4/lib/mobx.umd.js",
-    "dat.gui": "https://unpkg.com/dat.gui@^0.7.7/build/dat.gui.js"
+    "regl": "https://unpkg.com/regl@1.6.1/dist/regl.js",
+    "mobx": "https://unpkg.com/mobx@5.15.4/lib/mobx.umd.js",
+    "dat.gui": "https://unpkg.com/dat.gui@0.7.7/build/dat.gui.js"
   }
 }
