--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/dat.gui": "0.7.5",
+    "@types/ramda": "^0.27.7",
+    "flyd": "0.2.8",
     "mobx": "5.15.4",
     "mobx-utils": "5.6.1",
+    "ramda": "0.27.0",
     "regl": "1.6.1"
   },
   "imports": {
-    "regl": "https://unpkg.com/regl@1.6.1/dist/regl.js",
+    "dat.gui": "https://unpkg.com/dat.gui@0.7.7/build/dat.gui.js",
+    "flyd": "https://unpkg.com/flyd@0.2.8/flyd.js",
     "mobx": "https://unpkg.com/mobx@5.15.4/lib/mobx.umd.js",
     "mobx-utils": "https://unpkg.com/mobx-utils@5.6.1/mobx-utils.umd.js",
-    "dat.gui": "https://unpkg.com/dat.gui@0.7.7/build/dat.gui.js"
+    "ramda": "https://unpkg.com/ramda@0.27.0/dist/ramda.js",
+    "regl": "https://unpkg.com/regl@1.6.1/dist/regl.js"
   }
 }
