--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "building my graphics tools",
   "main": "none",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "es-dev-server --node-resolve --watch"
+    "start": "npx @web/dev-server --watch"
   },
   "author": "Greg Fagan",
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/dat.gui": "0.7.5",
-    "@types/ramda": "^0.27.7",
+    "@types/ramda": "^0.27.38",
     "flyd": "0.2.8",
     "mobx": "5.15.4",
     "mobx-utils": "5.6.1",
