--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
   },
   "author": "Greg Fagan",
   "license": "UNLICENSED",
-  "devDependencies": {
-    "@types/dat.gui": "0.7.5",
+  "dependencies": {
+    "@types/dat.gui": "^0.7.6",
     "@types/ramda": "^0.27.38",
-    "flyd": "0.2.8",
-    "mobx": "5.15.4",
-    "mobx-utils": "5.6.1",
-    "ramda": "0.27.0",
-    "regl": "1.6.1"
+    "dat.gui": "^0.7.7",
+    "flyd": "^0.2.8",
+    "ramda": "^0.27.1",
+    "regl": "^2.1.0",
+    "systemjs": "^6.3.3",
+    "typescript": "^4.2.3"
   },
   "imports": {
-    "dat.gui": "https://unpkg.com/dat.gui@0.7.7/build/dat.gui.js",
-    "flyd": "https://unpkg.com/flyd@0.2.8/flyd.js",
-    "mobx": "https://unpkg.com/mobx@5.15.4/lib/mobx.umd.js",
-    "mobx-utils": "https://unpkg.com/mobx-utils@5.6.1/mobx-utils.umd.js",
-    "ramda": "https://unpkg.com/ramda@0.27.0/dist/ramda.js",
-    "regl": "https://unpkg.com/regl@1.6.1/dist/regl.js"
+    "dat.gui": "/node_modules/dat.gui/build/dat.gui.js",
+    "flyd": "/node_modules/flyd/flyd.js",
+    "ramda": "/node_modules/ramda/dist/ramda.js",
+    "regl": "/node_modules/regl/dist/regl.js"
+  },
+  "prettier": {
+    "arrowParens": "avoid"
   }
 }
