group stream tools

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dat.gui": "/node_modules/dat.gui/build/dat.gui.js",
     "flyd": "/node_modules/flyd/flyd.js",
     "ramda": "/node_modules/ramda/dist/ramda.js",
-    "regl": "/node_modules/regl/dist/regl.js"
+    "regl": "/node_modules/regl/dist/regl.js",
+    "/src/tools/stream": "/src/tools/stream/index.ts"
   },
   "prettier": {
     "arrowParens": "avoid",
