--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "prettier": {
     "arrowParens": "avoid",
-    "singleQuote": true
+    "singleQuote": true,
+    "proseWrap": "always"
   }
 }
