--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 .DS_Store
-node_modules
+node_modules/*
+
+!node_modules/dat.gui/
+node_modules/dat.gui/*
+!node_modules/dat.gui/build
+
+!node_modules/flyd/
+node_modules/flyd/*
+!node_modules/flyd/flyd.js
+
+!node_modules/ramda/
+node_modules/ramda/*
+!node_modules/ramda/dist/
+
+!node_modules/regl/
+node_modules/regl/*
+!node_modules/regl/dist/
+
+!node_modules/systemjs/
+node_modules/systemjs/*
+!node_modules/systemjs/dist/
+node_modules/systemjs/dist/*
+!node_modules/systemjs/dist/system.js
+
+!node_modules/typescript/
+node_modules/typescript/*
+!node_modules/typescript/lib/
+node_modules/typescript/lib/*
+!node_modules/typescript/lib/typescript.js
