--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2018",
     "lib": ["ES2018", "DOM"],
     "strict": true,
+    "noEmit": true,
     "isolatedModules": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
