--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "deploy": "npm run build --silent && gh-pages -d dist",
     "postinstall": "patch-package",
+    "prepare": "git config core.hooksPath $(pwd)/.githooks",
     "serve": "vite preview"
   },
   "author": "Greg Fagan",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@types/dat.gui": "^0.7.6",
     "@types/ramda": "^0.27.40",
+    "gh-pages": "^3.1.0",
     "patch-package": "^6.4.7",
     "typescript": "^4.2.4",
     "vite": "^2.1.5"
