--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fp-ts": "^2.10.2",
     "gl-matrix": "^3.3.0",
     "ramda": "^0.27.1",
-    "regl": "^2.1.0"
+    "regl": "^2.1.0",
+    "stats.js": "^0.17.0"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/dat.gui": "^0.7.6",
     "@types/ramda": "^0.27.40",
+    "@types/stats.js": "^0.17.0",
     "gh-pages": "^3.1.0",
     "patch-package": "^6.4.7",
     "typescript": "^4.2.4",
